Main was abit too big now its just mostly page issues as some styles are too large which is leading to the page scrolling into nothingness

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ html {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 220vh;
+    height: 110vh;
 }
 
 .normaltext {
